--- a/ui/src/components/Explorer/line-item-popdown.scss
+++ b/ui/src/components/Explorer/line-item-popdown.scss
@@ -9,7 +9,7 @@
 
   li {
     width: 100%;
-    padding: 0.75rem 0rem;
+    padding: 0.45rem 0rem;
     color: #2B2D42;
     display: flex;
     align-items: center;
@@ -21,7 +21,7 @@
     &:hover {
       // background: rgba(139, 99, 114, 0.1);
       // background: rgba(237, 242, 244, 0.5);
-      background: rgba(11, 103, 163, 0.2);
+      background: #f2f2f2;
       // &::after {
       //   content: "";
       //   position: absolute;
