--- a/ui/src/components/Form/textbox.scss
+++ b/ui/src/components/Form/textbox.scss
@@ -12,7 +12,7 @@
     font-size: 0.9rem;
   }
   input[type="text"] {
-    border-bottom: 1px solid #FF8E02;
+    border-bottom: 1px solid #000;
     border-top: none;
     border-left: none;
     border-right: none;
