--- a/ui/src/components/Popdown/popdown.scss
+++ b/ui/src/components/Popdown/popdown.scss
@@ -10,8 +10,8 @@
   margin-right: auto;
   min-height: 50px;
   background: #fff;
-  box-shadow: 0 4px 20px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
+  box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.2);
+  border-radius: .2rem;
   outline: none;
   border: 1px solid #ddd;
 }
