--- a/ui/public/index.css
+++ b/ui/public/index.css
@@ -1,15 +1,9 @@
-
 body {
   display: flex;
   flex-direction: column;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  /* background: rgba(139, 99, 114, 0.1); */
-}
-
-html, body {
-  height: 100%;
 }
 
 html.wf-loading > * {
@@ -17,64 +11,54 @@ html.wf-loading > * {
 }
 
 .app-footer {
-  background: #2b2d42;
-  /* padding: 0.25rem; */
-  display: grid;
-  grid-template-columns: 200px 100px auto;
-  height: 60px;
+  /* background: #007ee5; */
+  bottom: 0;
+  display: flex;
+  height: 2rem;
+  left: 0;
   margin-bottom: 0px;
   margin-top: auto;
+  position: fixed;
+  right: 0;
   width: 100%;
-}
-@media (min-width: 481px) and (max-width: 767px) {
-  .app-footer {
-    grid-template-columns: 200px auto;
-    grid-template-rows: 60px 60px;
-    height: 120px;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 480px) {
-  .app-footer {
-    grid-template-columns: 200px auto;
-    grid-template-rows: 70px 70px;
-    height: 140px;
-  }
 }
 
 .logo {
-  color: #edf2f4;
-  font-size: 1.2rem;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-weight: 700;
+  color: #191919;
+  font-size: 0.85rem;
+  font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
+  font-weight: 300;
   align-self: center;
   justify-self: center;
 }
+
 @media (min-width: 481px) and (max-width: 767px) {
   .logo {
     padding-left: 1rem;
     justify-self: left;
   }
 }
+
 @media (min-width: 320px) and (max-width: 480px) {
   .logo {
     justify-self: left;
     padding-left: 1rem;
   }
 }
+
 .footer-info {
-  color: #fff;
+  color: #191919;
   justify-self: right;
   align-self: center;
   margin-right: 0.5rem;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-weight: 600;
+  font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
+  font-weight: 300;
   display: inline-block;
   width: 100%;
   text-align: right;
-  
-  
+  font-size: 0.85rem;
 }
+
 .footer-info span {
   display: block;
   height: 100%;
@@ -82,14 +66,15 @@ html.wf-loading > * {
 
 @media (min-width: 481px) and (max-width: 767px) {
   .footer-info {
-  grid-column: 1/-1;
-  text-align: center;
+    grid-column: 1/-1;
+    text-align: center;
   }
 }
+
 @media (min-width: 320px) and (max-width: 480px) {
   .footer-info {
-  grid-column: 1/-1;
-  text-align: center;
+    grid-column: 1/-1;
+    text-align: center;
   }
 }
 
@@ -99,20 +84,22 @@ html.wf-loading > * {
   justify-content: center;
   align-self: center;
   justify-self: center;
-  margin-top: 0.5rem;
 }
+
 @media (min-width: 481px) and (max-width: 767px) {
   .social {
     justify-self: right;
     align-self: center;
   }
 }
+
 @media (min-width: 320px) and (max-width: 480px) {
   .social {
     justify-self: right;
     align-self: center;
   }
 }
+
 .social i {
   width: 1.1rem;
   height: 1.1rem;
