--- a/ui/src/components/ContextActions/control.scss
+++ b/ui/src/components/ContextActions/control.scss
@@ -2,35 +2,39 @@
   list-style: none;
   margin: 0;
   padding: 0px;
-  color: #2B2D42;
-  
+  color: #2b2d42;
+
   .ctx-menu-item {
-    padding: .65rem 0;
+    padding: 0.5rem 0;
     text-align: left;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    font-family: "Open Sans", Arial, Helvetica, sans-serif;
-    font-size: .85rem;
-    font-weight: normal;
+    font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
     position: relative;
     cursor: pointer;
 
     &:hover {
-      background: rgba(11, 103, 163, 0.2);
+      background: #e5e5e5;
+      color: #191919;
     }
 
     &:first-child {
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
     }
+
     &:last-child {
       border-bottom-left-radius: 5px;
       border-bottom-right-radius: 5px;
     }
+
     span {
       margin-left: 1rem;
     }
+
     i {
       width: 1rem;
       height: 1rem;
