--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -1,57 +1,63 @@
 button {
-  border-radius: 2px;
-  font-size: 0.8rem;  
-  cursor: pointer;
-  outline: none;
-  display: flex;
   align-items: center;
-  justify-content: center;
-  position: relative;
+  border-radius: 2px;
   border: none;
-  
+  cursor: pointer;
+  display: flex;
+  font-size: 0.8rem;
+  justify-content: center;
+  outline: none;
+  position: relative;
+  color: #007ee5;
+
   .label {
-    font-family: "Open Sans", Arial, Helvetica, sans-serif;
+    font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
+    font-weight: 400;
     margin-bottom: 0 !important;
     text-transform: capitalize;
+    white-space: nowrap;
   }
+
   &.default {
-    padding: 0.45rem 0.45rem;
-    
-    border: 1px solid rgba(255, 194, 114, .8);
-    background: rgba(255, 194, 114, .85);
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    padding: 0.35rem 0.75rem;
+    background: #f2f2f2;
+
     .label {
-      color: #2B2D42;
       font-size: 1rem;
     }
   }
+
   &.rounded {
     border-radius: 4px;
-    border: 1px solid #ccc;
-    background: #f1f2f2;
+    background: #007ee5;
     padding: 0.4rem;
-    box-shadow: inset 0 0 12px 3px #bcbabe;
-    padding: 0.4rem;
+
     .label {
-      color: #000;
-      font-size: .8rem;
+      color: #fff;
+      font-size: 0.8rem;
       font-weight: 500;
     }
   }
+
   &.link {
     padding: 0.5rem 0.75rem;
     border-radius: 4px;
     border: none;
     background: none;
+
     .label {
       color: #007ee5;
       font-size: 0.75rem;
     }
+
     &.large {
       i {
         width: 1.75rem;
         height: 1.75rem;
       }
     }
+
     i {
       width: 1.5rem;
       height: 1.5rem;
@@ -63,17 +69,22 @@ button {
       }
     }
   }
+
   &.disabled {
-    padding: 0.5rem 0.5rem;
+    box-shadow: none;
+    padding: 0.35rem 0.75rem;
     background: #ccc;
-    border: 1px solid #ccc;
+    pointer-events: none;
+    filter: opacity(0.3) grayscale(95%);
     cursor: auto;
+
     .label {
-      color: #fff;
-      // color: #fff;
+      color: #191919;
       font-size: 1rem;
+      font-weight: 400;
     }
   }
+
   &.icon {
     margin: 0;
     background: transparent;
@@ -98,11 +109,30 @@ button {
       }
     }
   }
-  &.large {
+
+  &.big {
+    padding: 0.5rem 0.75rem;
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+
+    &.disabled {
+      box-shadow: none;
+    }
+
     .label {
-      font-size: 1rem;
+      font-size: 1.1rem;
+    }
+
+    .btn-icon-wrapper {
+      width: 1.5rem;
+      height: 1.5rem;
+
+      svg {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
+
   &.danger {
     padding: 0.5rem 0.75rem;
     background: #cb2431;
@@ -112,6 +142,7 @@ button {
       color: #fff;
     }
   }
+
   i {
     width: 1.25rem;
     height: 1.25rem;
@@ -125,5 +156,10 @@ button {
   img {
     max-width: 100%;
     max-height: 100%;
+  }
+
+  svg {
+    width: 100%;
+    height: 100%;
   }
 }
