--- a/ui/src/components/MoveCopy/stage-one.scss
+++ b/ui/src/components/MoveCopy/stage-one.scss
@@ -1,11 +1,11 @@
-.stageone-wrapper {
+.stage-one-wrapper {
   width: 100%;
 }
 .move-copy-container {
   width: 100%;
 }
 
-.stageone-header {
+.stage-one-header {
   width: 100%;
   text-align: left;
   margin: 1rem 0;
@@ -20,8 +20,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  width: 100%;
-  margin: 5rem 0 0.5rem 0;
+  width: 95%;
+  margin: 0 auto;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
   button {
     &:last-child {
       margin-left: 1rem;
@@ -33,12 +35,13 @@ img {
   max-height: 100%;
   max-width: 100%;
 }
+
 .move-copy-selection {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 2rem 0;
+  margin: 1rem 0 5rem 0;
 
   label {
     padding: 1rem 0.75rem;
@@ -53,18 +56,19 @@ img {
     justify-content: center;
     align-items: center;
     font-size: 1rem;
-    font-weight: 600;
+    font-weight: 400;
     border-radius: 4px;
-    border: 1px solid #ddd;
+    background: #fff;
+
     &:hover {
-      border: 1px solid #8D99AE;
+      background: #f2f2f2;
     }
 
     &.selected {
-      border: 1px solid #8D99AE;
-      color: #fff;
-      background: #8D99AE;
+      color: #191919;
+      background: #f2f2f2;
     }
+
     span {
       margin-right: auto;
       display: block;
