--- a/ui/src/components/MoveCopy/stage-three.scss
+++ b/ui/src/components/MoveCopy/stage-three.scss
@@ -1,5 +1,5 @@
 .stage2-container {
-  width: 400px;
+  width: 90%;
   header {
     width: 100%;
     span {
@@ -8,11 +8,13 @@
       display: block;
       padding-left: 0.5rem;
       margin: 0.25rem 0;
-      font-weight: 500;
+      font-weight: 400;
       font-size: 0.9rem;
+      font-family: Nunito, Arial, Helvetica, sans-serif;
     }
   }
 }
+
 .stage3-explorer-wrapper {
   overflow: auto;
   border-radius: 3px;
@@ -27,17 +29,26 @@ img {
   max-height: 100%;
   max-width: 100%;
 }
+
 .stage2-controls {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  margin: 2rem 0 0 0;
+  margin: 2rem 0 1rem;
+
+  button {
+    &:not(:first-child) {
+      margin-left: 1rem;
+    }
+  }
 }
+
 .stage3-loader-wrapper {
   margin-right: auto;
   position: relative;
 }
+
 .summary {
   margin: 1rem 0;
   display: flex;
@@ -66,11 +77,17 @@ img {
       width: 1rem;
       height: 1rem;
       margin: 0 0.5rem;
+
+      svg {
+        height: 100%;
+        width: 100%;
+      }
     }
   }
 }
+
 .error-msg-container {
   font-size: 0.9rem;
   margin-right: auto;
-  color: #D90429;
+  color: #d90429;
 }
