--- a/ui/src/components/Popup/popup.scss
+++ b/ui/src/components/Popup/popup.scss
@@ -4,32 +4,28 @@
   justify-content: center;
   height: 100%;
   outline: none;
-  // background:   linear-gradient(45deg, rgba(141,153,174,0.75) 0%, rgba(237,242,244,0.5) 100%);
-  background:  linear-gradient(45deg, rgba(237, 242, 244, 0.1) 0%, rgba(141,153,174,0.5) 100%);
+  background: linear-gradient(
+    45deg,
+    rgba(237, 242, 244, 0.1) 0%,
+    rgba(141, 153, 174, 0.5) 100%
+  );
+
   .popup-header {
     width: 100%;
-    padding: .3rem 0;
+    padding: 0.3rem 0;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     margin: 0;
-    margin-bottom: .2rem;
+    margin-bottom: 0.2rem;
     position: relative;
-    background: #0B67A3;
+    background: #007ee5;
     display: flex;
     align-items: center;
     justify-content: center;
-    // &::after {
-    //   content: "";
-    //   position: absolute;
-    //   bottom: -0.5rem;
-    //   width: 100%;
-    //   height: 1px;
-    //   background: #edf2f4;
-    //   left: 0;
-    // }
+
     .popup-title {
       display: block;
-      font-weight: 500;
+      font-weight: 400;
       max-width: 100%;
       overflow: hidden;
       text-align: left;
@@ -47,7 +43,7 @@
     justify-content: center;
     background: #fff;
     border-radius: 4px;
-    min-width: 400px;
+    width: 600px;
     position: relative;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.25);
     &::before {
@@ -67,11 +63,12 @@
     align-items: center;
     justify-content: center;
   }
+
   .closebutton-wrapper {
     position: absolute;
     z-index: 100;
     top: -8px;
-    right: -11px;
+    right: -2px;
     border-radius: 50%;
   }
   .fade-enter-active,
@@ -83,17 +80,12 @@
   }
 
   .close-modal {
-    // position: absolute;
-    // right: 0.25rem;
-    // top: 0.35rem;
     background: none;
     border: none;
     cursor: pointer;
-    // width: 2rem;
-    // height: 2rem;
     outline: none;
     margin-left: auto;
-    margin-right: .5rem;
+    margin-right: 0.25rem;
   }
   .img-close {
     width: 1.2rem;
