--- a/ui/src/components/notification.scss
+++ b/ui/src/components/notification.scss
@@ -1,5 +1,5 @@
 .notification-wrapper {
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -7,7 +7,8 @@
   min-width: 200px;
   max-width: 500px;
   min-height: 30px;
-  background: #edf2f4;
+  background: #f2f2f2;
+  // box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   border: 1px solid rgba(141, 153, 174, 0.5);
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
@@ -17,17 +18,19 @@
   margin-left: auto;
   margin-right: auto;
   transform: translateY(80vh);
-  padding-bottom: 1rem;
   z-index: 1999;
+  height: 7rem;
+
   header {
-    font-size: 0.95rem;
+    font-size: 1rem;
+    font-weight: 400;
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 0.5rem 0;
+    height: 100%;
     span {
-      padding-left: 0.5rem;
       font-weight: 500;
+      text-align: left;
     }
     button {
       border: none;
@@ -38,34 +41,37 @@
         height: 1rem;
         width: 1rem;
       }
-      img{
+      img {
         max-height: 100%;
         max-width: 100%;
       }
     }
   }
-  .content {
-    text-align: left;
-    padding: 0.25rem 0.5rem;
-    font-size: 0.9rem;
-    min-height: 50px;
-    width: 95%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    word-break: break-word;
-    span {
-      margin-left: 0.5rem;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: block;
-      width: 100%;
-      white-space: nowrap;
-    }
+}
+
+.close {
+  margin-left: auto;
+  width: 1.5rem;
+  height: 1.5rem;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+
+  svg {
+    width: 100%;
+    height: 100%;
   }
-  i {
-    width: 1.25rem;
-    height: 1.25rem;
-    margin-left: 0.5rem;
+}
+
+.type-icon {
+  margin-right: 1rem;
+  margin-left: 1rem;
+  width: 2rem;
+  height: 2rem;
+  color: #007ee5;
+
+  svg {
+    height: 100%;
+    width: 100%;
   }
 }
