--- a/ui/src/components/Treeview/folderview.scss
+++ b/ui/src/components/Treeview/folderview.scss
@@ -1,43 +1,50 @@
 .child-tree-wrapper {
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   justify-content: flex-start;
 }
+
 .child-tree {
-  padding-left: 1rem;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: flex-start;
   margin-top: 0.1rem;
+  padding-left: 1rem;
 }
+
 .folder {
-  display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 0.2rem; 
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  padding: 0.2rem;
+
   &:focus {
     outline: 1px dotted #646675;
     outline-offset: 2px;
   }
+
   i {
-    width: 1rem;
-    height: 1rem;
-    img {
-      max-height: 100%;
-      max-height: 100%;
+    height: 1.5rem;
+    width: 1.5rem;
+
+    svg {
+      height: 100%;
+      width: 100%;
     }
   }
 }
+
 .folderImg {
-  width: 1.25rem;
   height: 1.25rem;
   margin-right: 0.5rem;
+  width: 1.25rem;
 }
+
 i {
-  width: 1rem;
   height: 1rem;
   margin-right: 0.5rem;
+  width: 1rem;
 }
