--- a/ui/public/index.css
+++ b/ui/public/index.css
@@ -2,8 +2,8 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  padding: 0;
   overflow-x: hidden;
+  padding: 0;
 }
 
 html.wf-loading > * {
@@ -16,7 +16,7 @@ html.wf-loading > * {
   display: flex;
   height: 2rem;
   left: 0;
-  margin-bottom: 0px;
+  margin-bottom: 0;
   margin-top: auto;
   position: fixed;
   right: 0;
@@ -24,18 +24,18 @@ html.wf-loading > * {
 }
 
 .logo {
-  color: #191919;
-  font-size: 0.85rem;
-  font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
-  font-weight: 300;
   align-self: center;
+  color: #191919;
+  font-family: 'Nunito', 'Open Sans', Arial, Helvetica, sans-serif;
+  font-size: 0.85rem;
+  font-weight: 300;
   justify-self: center;
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
   .logo {
-    padding-left: 1rem;
     justify-self: left;
+    padding-left: 1rem;
   }
 }
 
@@ -47,16 +47,16 @@ html.wf-loading > * {
 }
 
 .footer-info {
-  color: #191919;
-  justify-self: right;
   align-self: center;
-  margin-right: 0.5rem;
-  font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
-  font-weight: 300;
+  color: #191919;
   display: inline-block;
-  width: 100%;
-  text-align: right;
+  font-family: 'Nunito', 'Open Sans', Arial, Helvetica, sans-serif;
   font-size: 0.85rem;
+  font-weight: 300;
+  justify-self: right;
+  margin-right: 0.5rem;
+  text-align: right;
+  width: 100%;
 }
 
 .footer-info span {
@@ -79,29 +79,29 @@ html.wf-loading > * {
 }
 
 .social {
-  display: flex;
   align-items: center;
-  justify-content: center;
   align-self: center;
+  display: flex;
+  justify-content: center;
   justify-self: center;
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
   .social {
-    justify-self: right;
     align-self: center;
+    justify-self: right;
   }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
   .social {
-    justify-self: right;
     align-self: center;
+    justify-self: right;
   }
 }
 
 .social i {
-  width: 1.1rem;
   height: 1.1rem;
   margin-right: 1rem;
+  width: 1.1rem;
 }
