--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -1,7 +1,7 @@
 .explorer-container {
-  display: grid;
-  column-gap: 2rem;
   align-items: start;
+  column-gap: 2rem;
+  display: grid;
   padding: 0.2rem 1rem 1rem;
   @media (min-width: 1281px) {
     column-gap: 2rem;
@@ -28,52 +28,61 @@
   }
   /* Extra Small Devices, Phones */
   @media only screen and (max-width: 480px) {
-    grid-column-gap: 0rem;
+    grid-column-gap: 0;
     grid-template-columns: 100%;
   }
   /* Custom, iPhone Retina */
   @media only screen and (max-width: 320px) {
-    grid-column-gap: 0rem;
+    grid-column-gap: 0;
     grid-template-columns: 100%;
   }
 }
+
 .loader-container {
-  position: absolute;
+  height: 100%;
   left: 0;
-  right: 0;
   margin-left: auto;
   margin-right: auto;
+  position: absolute;
+  right: 0;
   top: 0;
-  height: 100%;
   width: 100%;
 }
+
 .explorer {
   background: #fff;
-  border-radius: .2rem;
-  width: 100%;
+  border-radius: 0.2rem;
+  box-shadow: 0 0 12px 2px rgba($color: #000, $alpha: 0.2);
   position: relative;
-  box-shadow: 0 0 12px 2px rgba($color: #000000, $alpha: 0.2);
+  width: 100%;
+
   .line-item-wrapper {
     &:nth-child(odd) {
       background: #f2f2f2;
     }
   }
 }
+
 .explorer-content {
   min-height: 650px;
 }
+
 header.explorer-header {
-  width: 100%;
-  position: relative;
-  margin: 0;
   // background: #2b2d42;
   background: #007ee5;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  margin: 0;
+  position: relative;
+  width: 100%;
+
   .header-wrapper {
-    width: 100%;
     display: grid;
     grid-template-columns: 50px 45% 20% 20% auto;
+    list-style-type: none;
+    margin: 0;
+    padding: 0.55rem 0;
+    width: 100%;
     @media (min-width: 768px) and (max-width: 1024px) {
       grid-template-columns: 40px 50% 30% auto;
     }
@@ -83,32 +92,33 @@ header.explorer-header {
     @media (min-width: 320px) and (max-width: 480px) {
       grid-template-columns: 40px 50% 30% auto;
     }
-    list-style-type: none;
-    margin: 0;
-    padding: 0.55rem 0;
     // border-bottom: 1px solid #8D99AE;
     .header {
-      text-transform: capitalize;
-      font-size: 1rem;
-      font-weight: 500;
-      text-align: left;
-      padding-left: 0rem;
-      justify-self: left;
       align-self: center;
       color: #edf2f4;
+      font-size: 1rem;
+      font-weight: 500;
+      justify-self: left;
+      padding-left: 0;
       position: relative;
+      text-align: left;
+      text-transform: capitalize;
       width: 100%;
+
       &.control {
+        align-self: center;
         flex: 1;
         justify-self: center;
-        align-self: center;
       }
+
       &.name {
         flex: 2;
       }
+
       &.size {
         flex: 1;
       }
+
       &.modified {
         flex: 1;
         @media (min-width: 320px) and (max-width: 480px) {
@@ -121,38 +131,42 @@ header.explorer-header {
           display: none;
         }
       }
+
       &.empty {
         flex: 1;
       }
     }
   }
 }
+
 .info-message {
+  color: #c6c6c6;
   font-size: 1.75rem;
-  position: absolute;
   left: 0;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
   right: 0;
   top: 50%;
   transform: translateY(-50%);
-  margin-left: auto;
-  margin-right: auto;
-  color: #c6c6c6;
 }
+
 .ctx-control-container {
+  border-radius: 5px;
+  left: 1rem;
   position: absolute;
   top: 1rem;
-  left: 1rem;
-  border-radius: 5px;
 }
 
 .load-more {
-  display: flex;
-  justify-content: flex-start;
   align-items: center;
-  padding: 1rem 0;
+  display: flex;
   font-size: 0.9rem;
   font-weight: 700;
+  justify-content: flex-start;
+  padding: 1rem 0;
   padding-left: 2rem;
+
   a {
     color: #2b2d42;
   }
@@ -160,13 +174,15 @@ header.explorer-header {
 
 .list-fade-enter-active,
 .list-fade-leave-active {
-  opacity: 1;
-  transition: all 0.3s;
+  // opacity: 1;
+  // transition: all 0.3s;
 }
+
 .list-fade-enter,
 .list-fade-leave-to {
-  opacity: 0;
+  // opacity: 0;
 }
+
 .list-fade-move {
-  transform: 0.4s;
+  // transform: 0.4s;
 }
