--- a/ui/src/components/Folder/create-folder.scss
+++ b/ui/src/components/Folder/create-folder.scss
@@ -1,21 +1,22 @@
 .create-folder-wrapper {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0.1rem 1rem;
   position: relative;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0.1rem 1rem;
 }
 
 .create-folder-explorer-wrapper {
+  border: 1px solid #cce5f9;
+  border-radius: 0.1rem;
   height: 300px;
-  width: 95%;
-  overflow-y: auto;
-  padding: 0.5rem;
   margin-top: 1rem;
-  border: 1px solid #D8DCDE;
-  border-radius: 5px;
+  overflow-y: auto;
+  padding-left: 0.25rem;
+  padding-top: 0.25rem;
+  width: 95%;
 
   @media (min-width: 1281px) {
     height: 200px;
@@ -41,30 +42,30 @@
     padding: 0.5rem;
   }
 }
+
 .create-folder-controls {
-  padding: 3rem 0 1rem 0;
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: flex-end;
-  width: 100%;
+  padding: 3rem 0 1rem;
   position: relative;
+  width: 100%;
+
   button {
     &:last-child {
       margin-left: 1rem;
     }
   }
 }
+
 .selected-path-wrapper {
-  width: 95%;
+  align-items: center;
   display: flex;
-  justify-content: flex-start;
   font-size: 0.85rem;
   font-weight: 700;
+  justify-content: flex-start;
   margin-top: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
+  min-height: 1.75rem;
 
   span {
     display: block;
@@ -72,55 +73,60 @@
   }
 
   .selected-path {
-    font-weight: 400;
-    margin-top: 0.5rem;
-    text-align: left;
-    border-radius: 3px;
-    min-height: 1.75rem;
-    padding-left: 0.5rem;
-    width: 100%;
-    font-size: 0.9rem;
-    display: flex;
     align-items: center;
-    color: #191919;
-    min-height: 35px;
+    background: #efefef;
+    border-radius: 0.1rem;
+    color: #007ee5;
+    display: flex;
+    font-size: 0.9rem;
+    font-weight: 400;
+    height: 100%;
+    padding: 0.25rem 0.5rem;
+    text-align: left;
+    width: 100%;
   }
 }
+
 .crt-folder-sec-header {
   font-size: 0.9rem;
 }
+
 .error-messages-grp {
+  background: #fff;
+  border-radius: 4px;
   display: flex;
   flex-direction: column;
-  width: 100%;
-  border-radius: 4px;
-  background: #fff;
-  width: 100%;
   margin-top: 0.5rem;
+  width: 100%;
+  width: 100%;
   /* background:red; */
 }
+
 .error-message {
-  color: #cb2431;
-  font-size: 0.9rem;
-  margin-right: auto;
-  display: block;
-  margin: 0.25rem;
-  width: 100%;
-  text-align: left;
-  padding: 0.25rem;
-  display: flex;
   align-items: center;
+  color: #cb2431;
+  display: block;
+  display: flex;
+  font-size: 0.9rem;
   justify-content: flex-start;
+  margin: 0.25rem;
+  margin-right: auto;
+  padding: 0.25rem;
+  text-align: left;
+  width: 100%;
 }
+
 .crt-folder-loader-wrapper {
+  align-self: normal;
   margin-right: auto;
   position: relative;
-  align-self: normal;
 }
+
 img {
   max-height: 100%;
   max-width: 100%;
 }
+
 .create-folder-inputs {
   width: 100%;
 }
