--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -1,17 +1,18 @@
 button {
   align-items: center;
-  border-radius: 2px;
   border: none;
+  color: #007ee5;
   cursor: pointer;
   display: flex;
   font-size: 0.8rem;
   justify-content: center;
-  outline: none;
+  outline: 0;
   position: relative;
-  color: #007ee5;
+  padding: 0.35rem 0.75rem;
 
   .label {
-    font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
+    font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
+    font-size: 0.85rem;
     font-weight: 400;
     margin-bottom: 0 !important;
     text-transform: capitalize;
@@ -19,32 +20,34 @@ button {
   }
 
   &.default {
-    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
-    padding: 0.35rem 0.75rem;
     background: #f2f2f2;
+    border-radius: 0.1rem;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  }
 
-    .label {
-      font-size: 1rem;
-    }
+  &.disabled {
+    background: #ccc;
+    cursor: auto;
+    filter: opacity(0.3) grayscale(95%);
+    pointer-events: none;
   }
 
   &.rounded {
-    border-radius: 4px;
     background: #007ee5;
+    border-radius: 4px;
     padding: 0.4rem;
 
     .label {
       color: #fff;
-      font-size: 0.8rem;
       font-weight: 500;
     }
   }
 
   &.link {
-    padding: 0.5rem 0.75rem;
-    border-radius: 4px;
-    border: none;
     background: none;
+    border: 0;
+    border-radius: 4px;
+    padding: 0.5rem 0.75rem;
 
     .label {
       color: #007ee5;
@@ -53,66 +56,56 @@ button {
 
     &.large {
       i {
-        width: 1.75rem;
         height: 1.75rem;
+        width: 1.75rem;
       }
     }
 
     i {
-      width: 1.5rem;
       height: 1.5rem;
+      width: 1.5rem;
+
       img {
+        height: 100%;
         object-fit: contain;
         object-position: 50% 50%;
-        height: 100%;
         width: 100%;
       }
     }
   }
 
-  &.disabled {
-    box-shadow: none;
-    padding: 0.35rem 0.75rem;
-    background: #ccc;
-    pointer-events: none;
-    filter: opacity(0.3) grayscale(95%);
-    cursor: auto;
-
-    .label {
-      color: #191919;
-      font-size: 1rem;
-      font-weight: 400;
-    }
-  }
-
   &.icon {
-    margin: 0;
     background: transparent;
     border: none;
+    margin: 0;
+
     i {
-      width: 1.25rem;
       height: 1.25rem;
       margin-right: 0rem;
+      width: 1.25rem;
     }
+
     &.large {
       border: none;
+
       i {
-        width: 1.5rem;
         height: 1.5rem;
+        width: 1.5rem;
       }
     }
     &.medium {
       border: none;
+
       i {
-        width: 2rem;
         height: 2rem;
+        width: 2rem;
       }
     }
   }
 
   &.big {
-    padding: 0.5rem 0.75rem;
     box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+    padding: 0.5rem 0.75rem;
 
     &.disabled {
       box-shadow: none;
@@ -123,40 +116,36 @@ button {
     }
 
     .btn-icon-wrapper {
-      width: 1.5rem;
       height: 1.5rem;
+      width: 1.5rem;
 
       svg {
-        width: 100%;
         height: 100%;
+        width: 100%;
       }
     }
   }
 
   &.danger {
-    padding: 0.5rem 0.75rem;
     background: #cb2431;
-    color: #fff;
     border: 2px solid #cb2431;
+    color: #fff;
+    padding: 0.5rem 0.75rem;
+
     .label {
       color: #fff;
     }
   }
 
   i {
-    width: 1.25rem;
     height: 1.25rem;
     margin-right: 0.3rem;
+    width: 1.25rem;
   }
 }
 
 .btn-icon-wrapper {
   display: block;
-
-  img {
-    max-width: 100%;
-    max-height: 100%;
-  }
 
   svg {
     width: 100%;
