--- a/ui/src/components/MoveCopy/stage-one.scss
+++ b/ui/src/components/MoveCopy/stage-one.scss
@@ -1,14 +1,16 @@
 .stage-one-wrapper {
   width: 100%;
 }
+
 .move-copy-container {
   width: 100%;
 }
 
 .stage-one-header {
-  width: 100%;
-  text-align: left;
   margin: 1rem 0;
+  text-align: left;
+  width: 100%;
+
   span {
     font-size: 1rem;
     font-weight: 700;
@@ -16,14 +18,15 @@
 }
 
 .stage1-controls {
+  align-items: center;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: flex-end;
-  width: 95%;
   margin: 0 auto;
   margin-bottom: 1rem;
   margin-right: 1rem;
+  width: 95%;
+
   button {
     &:last-child {
       margin-left: 1rem;
@@ -37,50 +40,59 @@ img {
 }
 
 .move-copy-selection {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  margin: 1rem 0 5rem 0;
+  margin: 1rem 0 5rem;
 
   label {
-    padding: 1rem 0.75rem;
-    border-radius: 4px;
-    height: 100%;
-    flex: 1;
-    margin: 0.5rem 0;
-    cursor: pointer;
-    width: 90%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
+    background: #fff;
+    border-radius: .1rem;
+    cursor: pointer;
+    display: flex;
+    flex: 1;
+    flex-direction: row;
     font-size: 1rem;
     font-weight: 400;
-    border-radius: 4px;
-    background: #fff;
+    height: 100%;
+    justify-content: center;
+    margin: 0.5rem 0;
+    padding: 1rem 0.75rem;
+    width: 90%;
 
     &:hover {
       background: #f2f2f2;
     }
 
     &.selected {
-      color: #191919;
-      background: #f2f2f2;
+      background: #efefef;
+      border-radius: 0.3rem;
+      color: #007ee5;
     }
 
     span {
-      margin-right: auto;
       display: block;
+      margin-left: 0.5rem;
+      margin-right: auto;
     }
 
     i {
-      width: 1.25rem;
-      height: 1.25rem;
-      margin-right: auto;
+      align-items: center;
+      display: flex;
+      height: 1.75rem;
+      justify-content: center;
+      width: 1.75rem;
+
+      svg {
+        height: 100%;
+        width: 100%;
+      }
     }
   }
-  input[type="radio"] {
+
+  input[type='radio'] {
     display: none;
   }
 }
