--- a/ui/src/components/MoveCopy/stage-three.scss
+++ b/ui/src/components/MoveCopy/stage-three.scss
@@ -1,39 +1,42 @@
 .stage2-container {
   width: 90%;
+
   header {
     width: 100%;
+
     span {
-      width: 100%;
-      text-align: left;
       display: block;
-      padding-left: 0.5rem;
-      margin: 0.25rem 0;
-      font-weight: 400;
-      font-size: 0.9rem;
       font-family: Nunito, Arial, Helvetica, sans-serif;
+      font-size: 0.9rem;
+      font-weight: 400;
+      margin: 0.25rem 0;
+      padding-left: 0.5rem;
+      text-align: left;
+      width: 100%;
     }
   }
 }
 
 .stage3-explorer-wrapper {
-  overflow: auto;
+  border: 1px solid #cce5f9;
   border-radius: 3px;
-  border: 1px solid #ddd;
-  margin: 0.5rem 0;
-  padding-top: 0.5rem;
-  padding-left: 0.5rem;
   height: 250px;
+  margin: 0.5rem 0;
   overflow: auto;
+  overflow: auto;
+  padding-left: 0.25rem;
+  padding-top: 0.25rem;
 }
+
 img {
   max-height: 100%;
   max-width: 100%;
 }
 
 .stage2-controls {
+  align-items: center;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: flex-end;
   margin: 2rem 0 1rem;
 
@@ -50,33 +53,40 @@ img {
 }
 
 .summary {
-  margin: 1rem 0;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
   font-size: 1rem;
+  justify-content: center;
+  margin: 1rem 0;
+
   div {
     margin: 0.25rem 0;
   }
+
   .summary-final {
+    align-items: center;
+    background: #efefef;
+    border-radius: 0.1rem;
+    color: #007ee5;
     display: flex;
     flex-direction: row;
-    align-items: center;
     flex-wrap: wrap;
     margin: 0.25rem 0;
+
     span {
       border-radius: 3px;
-      color: #000;
+      font-size: 0.9rem;
       padding: 0.25rem 0.5rem;
       text-align: left;
-      font-size: 0.9rem;
       word-break: break-word;
     }
+    
     i {
-      width: 1rem;
+      color: #000;
       height: 1rem;
       margin: 0 0.5rem;
+      width: 1rem;
 
       svg {
         height: 100%;
@@ -87,7 +97,7 @@ img {
 }
 
 .error-msg-container {
+  color: #d90429;
   font-size: 0.9rem;
   margin-right: auto;
-  color: #d90429;
 }
