--- a/ui/src/components/MoveCopy/stage-two.scss
+++ b/ui/src/components/MoveCopy/stage-two.scss
@@ -1,29 +1,15 @@
 .stage2-container {
   width: 90%;
-  .stage2-header {
-    width: 100%;
-    span {
-      width: 100%;
-      text-align: left;
-      display: block;
-      padding-left: 0.5rem;
-      margin: 0.5rem 0;
-      font-weight: 400;
-      font-size: 1rem;
-      font-family: 'Nunito', Arial, Helvetica, sans-serif;
-    }
-  }
 }
 
 .stage2-explorer-wrapper {
-  overflow: auto;
-  margin-top: 1rem;
-  border: 1px solid #ddd;
+  border: 1px solid #cce5f9;
   border-radius: 3px;
-  padding-left: 0.5rem;
-  padding-top: 0.5rem;
   height: 400px;
+  margin-top: 1rem;
   overflow: auto;
+  padding-left: 0.25rem;
+  padding-top: 0.25rem;
 }
 
 img {
@@ -32,43 +18,44 @@ img {
 }
 
 .stage2-controls {
+  align-items: center;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: flex-end;
   margin: 1rem 0;
+
   button {
     &:not(:first-child) {
       margin-left: 1rem;
     }
   }
+
   .stage2-loader-wrapper {
-    margin-right: auto;
     align-self: normal;
+    margin-right: auto;
   }
 }
 
 .selected-src {
-  font-size: 0.9rem;
-  margin: 0.25rem 0 2rem 0;
-  width: 100%;
+  align-items: center;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-
+  font-size: 0.9rem;
+  justify-content: flex-start;
+  margin-top: 0.5rem;
+  min-height: 2rem;
+  width: 100%;
+  
   .value {
-    margin-top: 0.5rem;
-    display: block;
-    width: 95%;
-    word-break: break-all;
-    text-align: left;
-    min-height: 26px;
-    font-weight: 500;
-    display: flex;
     align-items: center;
+    background: #efefef;
+    border-radius: 0.1rem;
+    color: #007ee5;
+    display: flex;
+    font-weight: 500;
+    height: 100%;
     justify-content: flex-start;
-    color: #2b2d42;
-    border-radius: 3px;
-    padding: 0.1rem 0.5rem;
+    padding: 0.2rem 0.5rem;
+    text-align: left;
+    word-break: break-all;
   }
 }
