--- a/ui/src/components/Popup/popup.scss
+++ b/ui/src/components/Popup/popup.scss
@@ -1,81 +1,80 @@
 .popup {
-  display: flex;
   align-items: center;
-  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
   height: 100%;
+  justify-content: center;
   outline: none;
-  background: linear-gradient(
-    45deg,
-    rgba(237, 242, 244, 0.1) 0%,
-    rgba(141, 153, 174, 0.5) 100%
-  );
 
   .popup-header {
-    width: 100%;
-    padding: 0.3rem 0;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    align-items: center;
+    background: #007ee5;
+    border-top-left-radius: 0.1rem;
+    border-top-right-radius: 0.1rem;
+    display: flex;
+    justify-content: center;
     margin: 0;
     margin-bottom: 0.2rem;
+    padding: 0.3rem 0;
     position: relative;
-    background: #007ee5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+    width: 100%;
+    
     .popup-title {
+      color: #fff;
       display: block;
+      font-size: 1rem;
       font-weight: 400;
       max-width: 100%;
       overflow: hidden;
-      text-align: left;
       padding: 0.35rem 0.75rem;
-      font-size: 1.1rem;
-      color: #fff;
+      text-align: left;
+      text-transform: uppercase;
     }
   }
 
   .popup-container {
-    // padding: 0.75rem;
-    display: flex;
     align-items: center;
+    background: #fff;
+    border-radius: 0.1rem;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.25);
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    background: #fff;
-    border-radius: 4px;
-    width: 600px;
     position: relative;
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.25);
+
     &::before {
-      content: "";
-      position: absolute;
-      width: 1px;
+      content: '';
       height: 3.6rem;
-      // background: #AE8D99;
       left: 0;
+      position: absolute;
       top: 0;
+      width: 1px;
     }
   }
+
   .popup-content {
-    width: 100%;
-    padding: 0.25rem 0.5rem;
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
+    padding: 0.25rem 0.5rem;
+    width: 100%;
   }
 
   .closebutton-wrapper {
-    position: absolute;
-    z-index: 100;
-    top: -8px;
-    right: -2px;
     border-radius: 50%;
+    position: absolute;
+    right: -2px;
+    top: -8px;
+    z-index: 100;
   }
+
   .fade-enter-active,
   .fade-leave-active {
     transition: opacity 2.5s;
   }
-  .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+
+  .fade-enter,
+  .fade-leave-to {
     opacity: 0;
   }
 
@@ -83,12 +82,13 @@
     background: none;
     border: none;
     cursor: pointer;
-    outline: none;
     margin-left: auto;
     margin-right: 0.25rem;
+    outline: none;
   }
+
   .img-close {
-    width: 1.2rem;
     height: 1.2rem;
+    width: 1.2rem;
   }
 }
