--- a/ui/src/components/Treeview/folderview.scss
+++ b/ui/src/components/Treeview/folderview.scss
@@ -10,7 +10,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-top: 0.1rem;
   padding-left: 1rem;
 }
 
@@ -19,16 +18,18 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
-  padding: 0.2rem;
+  padding: 0.2rem 0.25rem;
 
   &:focus {
-    outline: 1px dotted #646675;
-    outline-offset: 2px;
+    background: #efefef;
+    border-radius: .2rem;
+    outline: 0;
   }
 
   i {
-    height: 1.5rem;
-    width: 1.5rem;
+    color: #007ee5;
+    height: 1.25rem;
+    width: 1.25rem;
 
     svg {
       height: 100%;
