--- a/ui/src/components/Upload/upload.scss
+++ b/ui/src/components/Upload/upload.scss
@@ -1,210 +1,214 @@
 .upload-main {
-  width: 100%;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .upload-wrapper {
-  padding: 0.5rem 0.75rem;
-  width: 90%;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  padding: 0.5rem 0.75rem;
+  width: 90%;
 
-  .drop-zone {
-    width: 100%;
-    background: #fff;
-    border: 2px dashed #e5e5e5;
-    border-radius: 0.2rem;
-    position: relative;
-    font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
-    cursor: pointer;
-
-    &::hover {
-      background: #8d99ae;
-    }
-
-    &.drag-over {
-      border: 2px solid #007ee5;
-      background: #fff;
-    }
-
-    &.dropped {
-      background: #fff;
-      border: 2px solid transparent;
-    }
-
-    .dropped-file {
-      height: 13rem;
-      background: #f2f2f2;
-      box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, 0.1);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      border-radius: 0.2rem;
-
-      .icon-wrapper {
-        width: 2rem;
-        height: 2rem;
-        margin-right: 0.5rem;
-
-        img {
-          max-height: 100%;
-          max-width: 100%;
-        }
-      }
-
-      .file-name {
-        font-size: 0.85rem;
-        font-weight: 600;
-        color: #191919;
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        border: none;
-        width: 90%;
-        padding: 0 0.25rem;
-      }
-
-      .file-size {
-        font-size: 1rem;
-        font-weight: normal;
-      }
-    }
-  }
   .intro-message {
+    align-items: center;
+    color: #cbcbcb;
+    display: flex;
     font-size: 1.5rem;
     font-weight: 300;
-    color: #cbcbcb;
     height: 12rem;
-    display: block;
-    display: flex;
-    align-items: center;
     justify-content: center;
+
+    &:hover {
+      background: #f2f2f2;
+      color: #ccc;
+    }
+  }
+}
+
+.drop-zone {
+  background: #fff;
+  border: 2px dashed #ccc;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
+  position: relative;
+  width: 100%;
+
+  &.drag-over {
+    background: #fff;
+    border: 2px solid #007ee5;
+  }
+
+  &.dropped {
+    background: #fff;
+    border: 2px solid transparent;
+  }
+}
+
+.dropped-file {
+  align-items: center;
+  background: #f5f5f5;
+  border: 1px solid #cce5f9;
+  display: flex;
+  flex-direction: column;
+  height: 12rem;
+  justify-content: center;
+
+  .icon-wrapper {
+    height: 2rem;
+    margin-right: 0.5rem;
+    width: 2rem;
+
+    img {
+      max-height: 100%;
+      max-width: 100%;
+    }
+  }
+
+  .file-name {
+    border: 0;
+    color: #191919;
+    font-size: 0.85rem;
+    font-weight: 400;
+    overflow: hidden;
+    padding: 0 0.25rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 90%;
+  }
+
+  .file-size {
+    font-size: 1rem;
+    font-weight: normal;
   }
 }
 
 .upload-controls {
-  width: 95%;
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: center;
   margin: 1rem 0;
   padding-right: 1.5rem;
-  // button {
-  //   &:last-child {
-  //     margin-left: 1rem;
-  //   }
-  // }
+  width: 95%;
 }
+
 img {
   max-height: 100%;
   max-width: 100%;
 }
 
 .upload-file-explorer-container {
-  width: 100%;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  width: 100%;
+
+  &.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
 
 .upload-explorer-wrapper {
-  width: 98%;
+  border: 1px solid #cce5f9;
+  border-radius: 0.1rem;
+  height: 12rem;
+  margin-top: 1rem;
   overflow: auto;
-  border: 1px solid #ddd;
-  border-radius: 4px;
   padding-left: 0.5rem;
   padding-top: 0.5rem;
-  height: 12rem;
+  width: 98%;
 }
 
 .clear-upload {
-  position: absolute;
   left: 0.2rem;
+  position: absolute;
   top: 0.25rem;
 }
 
 .progress-wrap {
-  width: 90%;
-  margin-top: 1rem;
   height: 1rem;
+  margin-top: 1rem;
+  width: 90%;
 }
 
 .upload-path-selection {
-  // margin: 0.25rem 0;
-  padding: 0.5rem 0.75rem;
-  width: 90%;
+  align-items: flex-start;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  height: 0;
+  margin-top: 1rem;
+  min-height: 1.75rem;
+  width: 90%;
 
   span {
-    min-height: 1rem;
-    text-align: left;
-    display: block;
-    width: 100%;
-    display: inline-block;
-    padding-left: 1rem;
-    max-width: 400px;
-    font-size: 0.85rem;
+    align-items: center;
+    border-radius: 0.1rem;
+    display: flex;
+    font-size: 0.9rem;
     font-weight: 400;
-    border-radius: 3px;
-    padding: 0.25rem 0rem;
-    padding-left: 0.1rem;
+    height: 100%;
+    justify-content: flex-start;
+    padding: 0 0.5rem;
     word-break: break-word;
 
     &.highlight {
-      color: #0080ff;
+      background: #efefef;
+      color: #007ee5;
     }
   }
 }
+
 .upload-explorer-header {
-  margin-top: 1.5rem;
-  margin-bottom: 0.5rem;
+  font-family: 'Nunito', 'Open Sans', Arial, Helvetica, sans-serif;
+  font-size: 0.85rem;
   font-weight: 400;
-  font-family: "Nunito", "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: .85rem;
-  width: 100%;
+  margin-bottom: 0.5rem;
+  margin-top: 1.5rem;
   text-align: left;
+  width: 100%;
 }
+
 .ps {
-  font-style: italic;
-  font-size: 0.9rem;
+  color: #8d99ae;
   display: block;
-  width: 100%;
+  font-size: 0.9rem;
+  font-style: italic;
   margin-top: 0.25rem;
-  text-align: left;
+  padding-bottom: 0.75rem;
   padding-left: 1.5rem;
   padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  color: #8d99ae;
-}
-.dropzone-backdrop-icon {
+  text-align: left;
   width: 100%;
-  height: 40%;
+}
+
+.dropzone-backdrop-icon {
   color: #007ee5;
+  height: 4rem;
+  width: 100%;
 
   svg {
-    width: 100%;
     height: 100%;
+    width: 100%;
   }
 }
+
 .uploaded-file-attrs {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 95%;
   margin-top: 1rem;
+  width: 95%;
 
   .upload-success-msg {
-    margin-top: 1rem;
+    color: #000;
     font-size: 1rem;
     font-weight: 300;
-    color: #000;
+    margin-top: 1rem;
   }
 }
