--- a/ui/src/components/loader.scss
+++ b/ui/src/components/loader.scss
@@ -1,88 +1,24 @@
 .loader-wrapper {
-  display: flex;
   align-items: center;
+  animation: loading 1.5s linear infinite;
+  color: #007ee5;
+  display: flex;
+  height: 1.5rem;
   justify-content: center;
-  position: absolute;
-  top: 20%;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  span {
-    font-size: 0.9rem;
-  }
-  background: #fff;
-  height: 100%;
-  width: 100%;
-  z-index: 999;
-  &.translucent {
-    background: rgba(255, 255, 255, 0.1);
+  width: 1.5rem;
+
+  svg {
+    height: 100%;
+    width: 100%;
   }
 }
-.loader-icon {
-  &.large {
-    height: 3rem;
-    width: 3rem;
-  }
-  &.small {
-    height: 1.5rem;
-    width: 1.5rem;
-  }
-}
-.lds-ellipsis {
-  display: inline-block;
-  position: relative;
-  width: 40px;
-  height: 40px;
-}
-.lds-ellipsis div {
-  position: absolute;
-  top: 17px;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background: #C2C7C8;
-  animation-timing-function: cubic-bezier(0, 1, 1, 0);
-}
-.lds-ellipsis div:nth-child(1) {
-  left: 6px;
-  animation: lds-ellipsis1 0.6s infinite;
-}
-.lds-ellipsis div:nth-child(2) {
-  left: 6px;
-  animation: lds-ellipsis2 0.6s infinite;
-}
-.lds-ellipsis div:nth-child(3) {
-  left: 26px;
-  animation: lds-ellipsis2 0.6s infinite;
-}
-.lds-ellipsis div:nth-child(4) {
-  left: 45px;
-  animation: lds-ellipsis3 0.6s infinite;
-}
-@keyframes lds-ellipsis1 {
+
+@keyframes loading {
   0% {
-    transform: scale(0);
+    transform: rotate(0);
   }
+
   100% {
-    transform: scale(1);
-  }
-}
-@keyframes lds-ellipsis3 {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
-  }
-}
-@keyframes lds-ellipsis2 {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(19px, 0);
+    transform: rotate(360deg);
   }
 }
