--- a/ui/src/views/dashboard.scss
+++ b/ui/src/views/dashboard.scss
@@ -1,10 +1,11 @@
 .dashboard-wrapper {
-  margin: 0 auto;
-  height: 100%;
-  padding: 0.5rem;
   display: grid;
-  grid-template-rows: 0px 40px auto;
+  grid-gap: 1rem;
   grid-template-columns: 100%;
+  grid-template-rows: 0 40px auto;
+  height: 100%;
+  margin: 0 auto;
+  padding: 0.5rem;
   position: relative;
   @media (min-width: 1281px) {
     grid-template-rows: 80px auto auto;
@@ -16,8 +17,8 @@
     grid-template-rows: 260px auto;
   }
   @media only screen and (max-width: 992px) {
-      grid-template-rows: 250px auto;
-    }
+    grid-template-rows: 250px auto;
+  }
   @media (min-width: 481px) and (max-width: 767px) {
     // border: 1px solid red;
     grid-template-rows: 250px 50px auto;
@@ -26,66 +27,68 @@
     // border: 1px solid blue;
     grid-template-rows: 280px 50px auto;
   }
-  grid-gap: 1rem;
 }
+
 .explorer-wrapper {
   width: 100%;
 }
+
 .modal-area {
+  height: 100%;
+  left: 0;
+  overflow: hidden;
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
   z-index: 999;
 
 }
+
 .explorer-controls {
-  width: 100%;
   display: flex;
-  padding: 0.25rem;
   margin-bottom: 0.5rem;
-}
-.toolbar-container {
-  justify-self: center;
-  align-self: center;
+  padding: 0.25rem;
   width: 100%;
+}
+
+.toolbar-container {
+  align-self: center;
+  justify-self: center;
   padding: 2rem 0.75rem 1rem;
+  width: 100%;
 }
 
 .fade-enter-active,
 .fade-leave-active {
   opacity: 1;
-  transform: scale(1);
-  transition: all 0.2s;
+  transition: all 0.1s;
 }
+
 .fade-enter,
 .fade-leave-to {
   opacity: 0;
-  transform: scale(0.9);
 }
 
 .peek-enter-active,
 .peek-leave-active {
   opacity: 1;
   transition: all 0.25s;
-  transform: scale(1);
 }
+
 .peek-enter,
 .peek-leave-to {
   opacity: 0;
-  transform: scale(0.9);
 }
 
 .folder-path-container {
-  display: flex;
   align-items: center;
-  justify-content: flex-start;
   align-self: center;
+  display: flex;
+  justify-content: flex-start;
   padding: 0.25rem 0.75rem 0.25rem 1rem;
   /* border: 1px solid red; */
 }
+
 .explorer-main {
   align-self: flex-start;
   padding: 0 0.5rem;
