--- a/ui/src/components/Explorer/explorer-lineitem.scss
+++ b/ui/src/components/Explorer/explorer-lineitem.scss
@@ -2,7 +2,8 @@
   display: grid;
   grid-template-columns: 35px 45% 20% 20% auto;
   grid-template-rows: 2rem;
-  padding: 0.5rem 0.25rem;
+  padding: 0.75rem 0.25rem;
+  position: relative;
   @media (min-width: 768px) and (max-width: 1024px) {
     grid-template-columns: 35px 45% 30% auto;
   }
@@ -12,15 +13,15 @@
   @media (min-width: 320px) and (max-width: 480px) {
     grid-template-columns: 35px 45% 35% auto;
   }
-  position: relative;
+
   &:hover {
     &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      width: 1px;
+      background: #007ee5;  // transform: translateX(0%);
+      content: '';
       height: 100%;
-      background: #8b6372;
+      left: 0;
+      position: absolute;
+      width: 1px;
     }
   }
 
@@ -28,30 +29,33 @@
     margin-left: auto;
     margin-right: 1.5rem;
   }
+
   .explorer-cell {
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: flex-start;
 
     &.name {
-      justify-self: left;
       flex: 2;
       font-size: 0.8rem;
-      width: 100%;
+      justify-self: left;
       padding: 0 0.5rem;
+      width: 100%;
     }
+
     &.size {
       flex: 1;
-      justify-self: left;
       font-size: 0.8rem;
       font-weight: 500;
+      justify-self: left;
     }
+
     &.last-modified {
       flex: 1;
-      justify-self: left;
       // text-align: left;
       font-size: 0.8rem;
       font-weight: 500;
+      justify-self: left;
       @media (min-width: 768px) and (max-width: 1024px) {
         display: none;
       }
@@ -62,64 +66,75 @@
         display: none;
       }
     }
+
     &.controls {
       justify-self: flex-end;
     }
 
     button {
-      margin-right: 1rem;
       background: none;
-      width: 2rem;
-      height: 2rem;
       border-radius: 5px;
       cursor: pointer;
+      height: 2rem;
+      margin-right: 1rem;
       outline: none;
+      width: 2rem;
+
       &:first-child {
         margin-left: auto;
       }
+
       &.delete-btn {
         border: 1px solid #ddd;
+
         &:hover {
           background: #ddd;
           cursor: pointer;
         }
       }
+
       &.download-btn {
         border: 1px solid #ddd;
+
         &:hover {
           background: #007ee5;
           cursor: pointer;
         }
       }
     }
+
     .explorer-icon {
       display: block;
-      width: 1.5rem;
       height: 1.5rem;
+      width: 1.5rem;
+
       img {
+        height: 100%;
         object-fit: contain;
         object-position: 50% 50%;
-        height: 100%;
         width: 100%;
       }
     }
 
     .resource {
-      margin-left: 0.5rem;
       font-weight: 500;
+      margin-left: 0.5rem;
       overflow: hidden;
-      white-space: nowrap;
       text-overflow: ellipsis;
+      white-space: nowrap;
+
       .folder-link {
         color: #5a626f;
         font-weight: 500;
         text-decoration: none;
       }
+
       .file-link {
-        text-decoration: none;
         color: #2b2d42;
+        text-decoration: none;
       }
     }
+
     .loader-wrapper {
       margin-left: auto;
       margin-right: 0.6rem;
@@ -127,25 +142,27 @@
   }
 
   &:hover {
-    background: rgba($color: #000000, $alpha: 0.04);
+    background: rgba($color: #000, $alpha: 0.04);
   }
 }
 
 .search-results-message {
-  display: flex;
   align-items: center;
-  justify-content: flex-start;
-  padding: 1rem 0;
-  padding-left: 1rem;
-  font-size: 0.95rem;
-  text-align: left;
-  display: block;
   background: #edf2f4;
   border-bottom: 1px solid #8d99ae;
   color: #2b2d42;
+  display: flex;
+  display: block;
+  font-size: 0.95rem;
+  justify-content: flex-start;
+  padding: 1rem 0;
+  padding-left: 1rem;
+  text-align: left;
+
   span {
     font-weight: 700;
   }
+
   a {
     margin-right: 2rem;
   }
