--- a/ui/src/components/Explorer/explorer.scss
+++ b/ui/src/components/Explorer/explorer.scss
@@ -1,51 +1,19 @@
 .explorer-container {
-  align-items: start;
-  column-gap: 2rem;
-  display: grid;
   padding: 0.2rem 1rem 1rem;
-  @media (min-width: 1281px) {
-    column-gap: 2rem;
-    grid-template-columns: 1fr 6fr;
-  }
-  @media screen and (min-width: 1400px) {
-    // grid-template-columns: 1fr 3fr;
-  }
-  @media screen and (min-width: 1600px) {
-    // grid-template-columns: 1fr 4fr;
-  }
-  @media screen and (min-width: 1900px) {
-    // grid-template-columns: 1fr 3fr;
-  }
-  @media (min-width: 1025px) and (max-width: 1280px) {
-    // grid-column-gap: 1rem;
-    // grid-template-columns: 1fr 2fr;
-  }
-  @media only screen and (max-width: 992px) {
-    grid-template-columns: 100%;
-  }
-  @media only screen and (max-width: 768px) {
-    grid-template-columns: 100%;
-  }
-  /* Extra Small Devices, Phones */
-  @media only screen and (max-width: 480px) {
-    grid-column-gap: 0;
-    grid-template-columns: 100%;
-  }
-  /* Custom, iPhone Retina */
-  @media only screen and (max-width: 320px) {
-    grid-column-gap: 0;
-    grid-template-columns: 100%;
-  }
 }
 
 .loader-container {
-  height: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
   left: 0;
   margin-left: auto;
   margin-right: auto;
   position: absolute;
   right: 0;
   top: 0;
+  top: 50%;
+  transform: translateY(-50%);
   width: 100%;
 }
 
@@ -67,81 +35,33 @@
   min-height: 650px;
 }
 
-header.explorer-header {
-  // background: #2b2d42;
+.explorer-header {
   background: #007ee5;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  height: 3.5rem;
   margin: 0;
   position: relative;
   width: 100%;
 
   .header-wrapper {
-    display: grid;
-    grid-template-columns: 50px 45% 20% 20% auto;
+    align-items: center;
+    display: flex;
+    height: 100%;
+    height: 100%;
+    justify-content: flex-start;
     list-style-type: none;
     margin: 0;
-    padding: 0.55rem 0;
+    padding: 0;
     width: 100%;
-    @media (min-width: 768px) and (max-width: 1024px) {
-      grid-template-columns: 40px 50% 30% auto;
-    }
-    @media (min-width: 481px) and (max-width: 767px) {
-      grid-template-columns: 40px 50% 30% auto;
-    }
-    @media (min-width: 320px) and (max-width: 480px) {
-      grid-template-columns: 40px 50% 30% auto;
-    }
-    // border-bottom: 1px solid #8D99AE;
-    .header {
-      align-self: center;
-      color: #edf2f4;
-      font-size: 1rem;
-      font-weight: 500;
-      justify-self: left;
-      padding-left: 0;
-      position: relative;
-      text-align: left;
-      text-transform: capitalize;
-      width: 100%;
-
-      &.control {
-        align-self: center;
-        flex: 1;
-        justify-self: center;
-      }
-
-      &.name {
-        flex: 2;
-      }
-
-      &.size {
-        flex: 1;
-      }
-
-      &.modified {
-        flex: 1;
-        @media (min-width: 320px) and (max-width: 480px) {
-          display: none;
-        }
-        @media (min-width: 481px) and (max-width: 767px) {
-          display: none;
-        }
-        @media (min-width: 768px) and (max-width: 1024px) {
-          display: none;
-        }
-      }
-
-      &.empty {
-        flex: 1;
-      }
-    }
   }
 }
 
 .info-message {
-  color: #c6c6c6;
+  color: #ccc;
+  font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
   font-size: 1.75rem;
+  font-weight: 300;
   left: 0;
   margin-left: auto;
   margin-right: auto;
@@ -166,23 +86,27 @@ header.explorer-header {
   justify-content: flex-start;
   padding: 1rem 0;
   padding-left: 2rem;
-
+  
   a {
     color: #2b2d42;
   }
 }
 
-.list-fade-enter-active,
-.list-fade-leave-active {
-  // opacity: 1;
-  // transition: all 0.3s;
+.search {
+  margin-left: auto;
 }
 
-.list-fade-enter,
-.list-fade-leave-to {
-  // opacity: 0;
+.toolbar {
+  margin-left: 2rem;
 }
 
-.list-fade-move {
-  // transform: 0.4s;
+.header {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+}
+
+.context {
+  margin-left: 1rem;
 }
