--- a/ui/src/components/Explorer/line-item-popdown.scss
+++ b/ui/src/components/Explorer/line-item-popdown.scss
@@ -1,56 +1,50 @@
 .options {
-  margin: 0;
-  width: 100%;
   height: 100%;
   list-style: none;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 0.95rem;
+  margin: 0;
   padding: 0;
+  width: 100%;
+}
 
-  li {
-    width: 100%;
-    padding: 0.45rem 0rem;
-    color: #2B2D42;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    text-align: center;
-    cursor: pointer;
-    
-    &:hover {
-      // background: rgba(139, 99, 114, 0.1);
-      // background: rgba(237, 242, 244, 0.5);
-      background: #f2f2f2;
-      // &::after {
-      //   content: "";
-      //   position: absolute;
-      //   left: 0;
-      //   top: 0;
-      //   width: 1px;
-      //   height: 100%;
-      //   background: #8b6372;
-      // }
-    }
-    &:first-child {
-      border-top-left-radius: 5px;
-      border-top-right-radius: 5px;
-    }
-    &:last-child {
-      border-bottom-left-radius: 5px;
-      border-bottom-right-radius: 5px;
-    }
-    i {
-      width: 0.25rem;
-      height: 0.25rem;
-      display: block;
-      margin-left: 0.75rem;
-      margin-right: 1rem;
+li {
+  align-items: center;
+  color: #191919;
+  cursor: pointer;
+  display: flex;
+  font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
+  font-size: 0.8rem;
+  font-weight: 400;
+  justify-content: center;
+  padding: 0.4rem 0;
+  position: relative;
+  text-align: center;
+  width: 100%;
+      
+  &:hover {
+    background: #f2f2f2;
+  }
+  
+  &:first-child {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
+  
+  &:last-child {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+  
+  i {
+    display: block;
+    height: 0.25rem;
+    margin-left: 0.75rem;
+    margin-right: 1rem;
+    width: 0.25rem;
+  
+  }
 
-      img {
-        max-height: 100%;
-        max-width: 100%;
-      }
-    }
+  img {
+    max-height: 100%;
+    max-width: 100%;
   }
 }
