--- a/ui/src/components/Form/button.scss
+++ b/ui/src/components/Form/button.scss
@@ -1,16 +1,16 @@
 button {
   align-items: center;
-  border: none;
+  border: 0;
   color: #007ee5;
   cursor: pointer;
   display: flex;
   font-size: 0.8rem;
   justify-content: center;
   outline: 0;
-  position: relative;
   padding: 0.35rem 0.75rem;
+  position: relative;
 
-  .label {
+  > .label {
     font-family: Nunito, Open Sans, Arial, Helvetica, sans-serif;
     font-size: 0.85rem;
     font-weight: 400;
@@ -18,137 +18,88 @@ button {
     text-transform: capitalize;
     white-space: nowrap;
   }
-
-  &.default {
-    background: #f2f2f2;
-    border-radius: 0.1rem;
-    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
-  }
-
-  &.disabled {
-    background: #ccc;
-    cursor: auto;
-    filter: opacity(0.3) grayscale(95%);
-    pointer-events: none;
-  }
-
-  &.rounded {
-    background: #007ee5;
-    border-radius: 4px;
-    padding: 0.4rem;
-
-    .label {
-      color: #fff;
-      font-weight: 500;
-    }
-  }
-
-  &.link {
-    background: none;
-    border: 0;
-    border-radius: 4px;
-    padding: 0.5rem 0.75rem;
-
-    .label {
-      color: #007ee5;
-      font-size: 0.75rem;
-    }
-
-    &.large {
-      i {
-        height: 1.75rem;
-        width: 1.75rem;
-      }
-    }
-
-    i {
-      height: 1.5rem;
-      width: 1.5rem;
-
-      img {
-        height: 100%;
-        object-fit: contain;
-        object-position: 50% 50%;
-        width: 100%;
-      }
-    }
-  }
-
-  &.icon {
-    background: transparent;
-    border: none;
-    margin: 0;
-
-    i {
-      height: 1.25rem;
-      margin-right: 0rem;
-      width: 1.25rem;
-    }
-
-    &.large {
-      border: none;
-
-      i {
-        height: 1.5rem;
-        width: 1.5rem;
-      }
-    }
-    &.medium {
-      border: none;
-
-      i {
-        height: 2rem;
-        width: 2rem;
-      }
-    }
-  }
-
-  &.big {
-    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
-    padding: 0.5rem 0.75rem;
-
-    &.disabled {
-      box-shadow: none;
-    }
-
-    .label {
-      font-size: 1.1rem;
-    }
-
-    .btn-icon-wrapper {
-      height: 1.5rem;
-      width: 1.5rem;
-
-      svg {
-        height: 100%;
-        width: 100%;
-      }
-    }
-  }
-
-  &.danger {
-    background: #cb2431;
-    border: 2px solid #cb2431;
-    color: #fff;
-    padding: 0.5rem 0.75rem;
-
-    .label {
-      color: #fff;
-    }
-  }
-
-  i {
-    height: 1.25rem;
-    margin-right: 0.3rem;
-    width: 1.25rem;
-  }
 }
 
 .btn-icon-wrapper {
   display: block;
 
   svg {
-    width: 100%;
     height: 100%;
+    width: 100%;
+  }
+}
+
+.default {
+  background: #f2f2f2;
+  border-radius: 0.1rem;
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.disabled {
+  background: #ccc;
+  cursor: auto;
+  filter: opacity(0.3) grayscale(95%);
+  pointer-events: none;
+}
+
+.big {
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.2);
+  padding: 0.5rem 0.75rem;
+
+  &.disabled {
+    box-shadow: none;
+  }
+
+  .label {
+    font-size: 1.1rem;
+  }
+}
+
+.danger {
+  background: #cb2431;
+  border-radius: 0.1rem;
+  color: #fff;
+  padding: 0.5rem 0.75rem;
+
+  .label {
+    color: #fff;
+  }
+}
+
+i {
+  height: 1.25rem;
+  margin-right: 0.3rem;
+  width: 1.25rem;
+}
+
+.icon {
+  background: transparent;
+  border: 0;
+  margin: 0;
+  color: #fff;
+
+  i {
+    height: 1.25rem;
+    margin-right: 0;
+    width: 1.25rem;
+  }
+
+}
+
+.large {
+  border: 0;
+  
+  i {
+    height: 1.5rem;
+    width: 1.5rem;
+  }
+}
+  
+.medium {
+  border: 0;
+  
+  i {
+    height: 2rem;
+    width: 2rem;
   }
 }
