--- a/ui/src/components/Toolbar/toolbar.scss
+++ b/ui/src/components/Toolbar/toolbar.scss
@@ -1,93 +1,39 @@
 .toolbar-wrapper {
-  // display: grid;
-  padding: 2rem 1rem;
-  column-gap: 1rem;
-  row-gap: 1rem;
   display: flex;
-  // @media (min-width: 1281px) {
-  //   grid-column-gap: 1rem;
-  //   grid-template-columns: 480px 540px auto;
-  // }
-  // @media (min-width: 1025px) and (max-width: 1280px) {
-  //   grid-template-columns: 400px 400px auto;
-  //   border: 1px solid transparent;
-  // }
-  // @media (min-width: 768px) and (max-width: 1024px) {
-  //   grid-template-rows: repeat(3, 60px);
-  //   row-gap: 2.5rem;
-  // }
-  // @media only screen and (max-width: 992px) {
-  //   grid-template-columns: 100%;
-  //   grid-template-rows: 70px 50px 50px;
-  //   row-gap: 1rem;
-  // }
-  // @media (min-width: 481px) and (max-width: 767px) {
-  //   grid-template-rows: 70px 50px 50px;
-  // }
-  // /* Extra Small Devices, Phones */
-  // @media only screen and (max-width: 480px) {
-  //   grid-column-gap: 0rem;
-  //   grid-template-rows: 180px 40px 30px;
-  // }
-  // /* Custom, iPhone Retina */
-  // @media only screen and (max-width: 320px) {
-  //   grid-template-rows: 200px 30px 30px;
-  //   grid-column-gap: 0rem;
-  // }
+  height: 100%;
+
   &:nth-child(2) {
     margin-left: auto;
   }
+
   .searchbox-container {
     margin-right: auto;
   }
 }
 
 .toolbar-buttons {
-  display: grid;
-  column-gap: 1rem;
   align-self: center;
-  grid-template-columns: 80px 100px 130px 150px;
-  grid-template-rows: 41px;
-  // @media (min-width: 1281px) {
-  //   grid-template-columns: 110px 135px 145px;
-  // }
-  // @media (min-width: 1025px) and (max-width: 1280px) {
-  //   grid-template-columns: 100px 120px 130 150px;
-  // }
-  // @media (min-width: 481px) and (max-width: 767px) {
-  //   grid-template-columns: 85px 105px 130px auto;
-  // }
-  // @media (min-width: 320px) and (max-width: 480px) {
-  //   grid-template-columns: 1fr;
-  //   grid-template-rows: repeat(3, 40px);
-  //   row-gap: 1rem;
-  // }
-  // @media (min-width: 768px) and (max-width: 1024px) {
-  //   grid-template-columns: auto 120px 150px 170px;
-  // }
+  display: flex;
+  height: 100%;
 }
 
 .searchbox-container-desk {
-  display: block;
-  width: 100%;
-  height: 100%;
   align-self: center;
-  // @media (min-width: 1025px) and (max-width: 1280px) {
-  //   justify-self: right;
-  //   width: 70%;
-  // }
-  // @media (min-width: 481px) and (max-width: 767px) {
-  //   width: 100%;
-  // }
-  // @media (min-width: 320px) and (max-width: 480px) {
-  //   width: 100%;
-  // }
-  // @media only screen and (max-width: 992px) {
-  //   width: 100%;
-  // }
+  display: block;
+  height: 100%;
+  margin-left: auto;
+  width: 20rem;
 }
 
 .account-settings-wrapper {
   justify-self: right;
 }
 
+.folder-path-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-left: 4rem;
+  overflow: hidden;
+  width: 500px;
+}
