--- a/ui/src/components/Treeview/folderview.scss
+++ b/ui/src/components/Treeview/folderview.scss
@@ -22,7 +22,7 @@
 
   &:focus {
     background: #efefef;
-    border-radius: .2rem;
+    border-radius: 0.2rem;
     outline: 0;
   }
 
@@ -31,21 +31,16 @@
     height: 1.25rem;
     width: 1.25rem;
 
-    svg {
-      height: 100%;
-      width: 100%;
-    }
   }
-}
 
-.folderImg {
-  height: 1.25rem;
-  margin-right: 0.5rem;
-  width: 1.25rem;
+  svg {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 i {
   height: 1rem;
-  margin-right: 0.5rem;
+  margin-right: 0.25rem;
   width: 1rem;
 }
