--- a/ui/src/components/Treeview/treeview.scss
+++ b/ui/src/components/Treeview/treeview.scss
@@ -16,6 +16,7 @@
 
   .folder-node {
     align-items: flex-start;
+    color: #191919;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
